<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btProperties"
        android:icon="@drawable/ic_properties_grey"
        android:state_checked="false"
        android:title="@string/title_property_list" />

    <item
        android:id="@+id/btInspections"
        android:state_checked="false"
        android:icon="@drawable/ic_inspection"
        android:title="@string/title_inspection_list" />

    <item
        android:id="@+id/btReports"
        android:state_checked="false"
        android:icon="@drawable/ic_reports"
        android:title="@string/title_report_list" />

    <item
        android:id="@+id/btProfile"
        android:state_checked="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>