<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectionDetailActivity"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/create_inspection"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAddTenant"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:textAlignment="textStart"
        android:textColor="@color/colorGrey"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_tenant"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_round_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/btAddSection"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_round_add"
        android:textAlignment="textStart"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorGrey"
        android:layout_height="wrap_content"
        android:text="@string/add_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAddTenant"
        style="?android:attr/borderlessButtonStyle" />

    <ListView
        android:id="@+id/sectionsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btSaveInspection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAddSection">
    </ListView>

    <Button
        android:id="@+id/btSaveInspection"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_weight=".5"
        android:background="@color/colorWhite"
        android:text="@string/save_inspection"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btReport"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginEnd="30dp"
        android:layout_weight=".5"
        android:background="@color/colorWhite"
        android:text="@string/generate_report"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>