<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectionSectionDetailActivity">

    <Spinner
        android:id="@+id/sectionsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp" />

    <Spinner
        android:id="@+id/itemsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp" />

    <RadioGroup
        android:id="@+id/radioGroupState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_damaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_item_status_damaged" />

        <RadioButton
            android:id="@+id/radio_scratched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_item_status_scratched" />

        <RadioButton
            android:id="@+id/radio_missing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_item_status_missing" />

        <RadioButton
            android:id="@+id/radio_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspection_item_status_good" />
    </RadioGroup>

    <EditText
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAddSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Add Section to Inspection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>