<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyDetailActivity"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txtPropertyType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="Real Estate"
        android:textSize="34sp"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_real_estate_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_owner"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPropertyType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:inputType="textPersonName"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/address"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/txtPropertyType" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_owner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textInput_owner" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_contact">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textInput_owner" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_unit"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textInput_owner" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_zipcode"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_unit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zipcode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textInput_owner" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
<!--        android:id="@+id/zipcode"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInput_address" />-->

<!--    <EditText-->
<!--        android:id="@+id/unit"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInput_zipcode" />-->

<!--    <EditText-->
<!--        android:id="@+id/owner"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/unit" />-->

<!--    <EditText-->
<!--        android:id="@+id/contact"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/owner" />-->

<!--    <EditText-->
<!--        android:id="@+id/notes"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:ems="10"-->
<!--        android:gravity="start|top"-->
<!--        android:inputType="textMultiLine"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/contact" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_notes"
        android:inputType="textPersonName"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_zipcode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textInput_owner" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/property_photo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_notes" />

    <Button
        android:id="@+id/btSaveProperty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save_property"
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:background="@drawable/btnsalmon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/propertyImage"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_photo_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePicButton" />

    <Button
        android:id="@+id/takePicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnblue"
        android:drawableStart="@drawable/ic_camera_white"
        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>